// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencyInput Component matches snapshot (en-CA) 1`] = `
.c1 {
  margin: 0 0 var(--spacing-3x);
}

.c1 input,
.c1 select,
.c1 textarea {
  border-color: #60666E;
}

.c1:focus {
  border-color: #006296;
}

.c1 > :nth-child(0) {
  margin-bottom: var(--spacing-half);
}

.c2 {
  background: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  outline: none;
  padding: var(--spacing-half) var(--spacing-1x);
  width: 100%;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c2::-webkit-input-placeholder {
  color: #60666E;
}

.c2::-moz-placeholder {
  color: #60666E;
}

.c2:-ms-input-placeholder {
  color: #60666E;
}

.c2::placeholder {
  color: #60666E;
}

.c2:disabled {
  background-color: #F1F2F2;
  border-color: #DBDEE1;
}

.c2:disabled,
.c2:disabled::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2:disabled::-moz-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2:disabled:-ms-input-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2:disabled::placeholder {
  color: #B7BBC2;
}

.c0 input {
  text-align: left;
  -webkit-transition: width 300ms;
  transition: width 300ms;
  width: 132px;
}

<div
  class="c0"
>
  <div
    class="c1"
    data-testid="field-container"
  >
    <input
      class="c2"
      data-testid="text-input"
      inputmode="numeric"
      placeholder="$"
      type="text"
      value="$100.00"
    />
  </div>
</div>
`;

exports[`CurrencyInput Component matches snapshot (en-US) 1`] = `
.c1 {
  margin: 0 0 var(--spacing-3x);
}

.c1 input,
.c1 select,
.c1 textarea {
  border-color: #60666E;
}

.c1:focus {
  border-color: #006296;
}

.c1 > :nth-child(0) {
  margin-bottom: var(--spacing-half);
}

.c2 {
  background: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  outline: none;
  padding: var(--spacing-half) var(--spacing-1x);
  width: 100%;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c2::-webkit-input-placeholder {
  color: #60666E;
}

.c2::-moz-placeholder {
  color: #60666E;
}

.c2:-ms-input-placeholder {
  color: #60666E;
}

.c2::placeholder {
  color: #60666E;
}

.c2:disabled {
  background-color: #F1F2F2;
  border-color: #DBDEE1;
}

.c2:disabled,
.c2:disabled::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2:disabled::-moz-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2:disabled:-ms-input-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2:disabled::placeholder {
  color: #B7BBC2;
}

.c0 input {
  text-align: left;
  -webkit-transition: width 300ms;
  transition: width 300ms;
  width: 132px;
}

<div
  class="c0"
>
  <div
    class="c1"
    data-testid="field-container"
  >
    <input
      class="c2"
      data-testid="text-input"
      inputmode="numeric"
      placeholder="$"
      type="text"
      value="$100.00"
    />
  </div>
</div>
`;

exports[`CurrencyInput Component matches snapshot (fr-CA) 1`] = `
.c1 {
  margin: 0 0 var(--spacing-3x);
}

.c1 input,
.c1 select,
.c1 textarea {
  border-color: #60666E;
}

.c1:focus {
  border-color: #006296;
}

.c1 > :nth-child(0) {
  margin-bottom: var(--spacing-half);
}

.c2 {
  background: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  outline: none;
  padding: var(--spacing-half) var(--spacing-1x);
  width: 100%;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c2::-webkit-input-placeholder {
  color: #60666E;
}

.c2::-moz-placeholder {
  color: #60666E;
}

.c2:-ms-input-placeholder {
  color: #60666E;
}

.c2::placeholder {
  color: #60666E;
}

.c2:disabled {
  background-color: #F1F2F2;
  border-color: #DBDEE1;
}

.c2:disabled,
.c2:disabled::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2:disabled::-moz-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2:disabled:-ms-input-placeholder {
  color: #B7BBC2;
}

.c2:disabled,
.c2:disabled::placeholder {
  color: #B7BBC2;
}

.c0 input {
  text-align: right;
  -webkit-transition: width 300ms;
  transition: width 300ms;
  width: 132px;
}

<div
  class="c0"
>
  <div
    class="c1"
    data-testid="field-container"
  >
    <input
      class="c2"
      data-testid="text-input"
      inputmode="numeric"
      placeholder="$"
      type="text"
      value="100,00 $"
    />
  </div>
</div>
`;
